# Imaginary-rs

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_CHECKLIST.md  Dockerfile  PERFORMANCE_SUMMARY.md  PRD.md  README.md  cert.pem  docker-compose.prod.yml  docker-compose.yml  key.pem  test.html
.github/workflows/: ci.yml
benches/: image_operations.rs  memory_usage.rs  pipeline_performance.rs
config/: default  default.toml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
scripts/: load_test.rs
src/: lib.rs  main.rs
src/config/: cli.rs  mod.rs
src/http/: errors.rs  handlers.rs  info.rs  mod.rs
src/http/handlers/: health_handler.rs  legacy_convert_handler.rs  legacy_process_handler.rs  mod.rs  pipeline_handler.rs
src/image/: mod.rs  operations.rs  operations_test.rs  params.rs  pipeline.rs  pipeline_executor.rs  pipeline_types.rs
src/image/operations/: color.rs  format.rs  mod.rs  overlay.rs  transform.rs  watermark.rs
src/security/: mod.rs
src/server/: middleware.rs  mod.rs  options.rs  routes.rs
src/storage/: mod.rs
src/utils/: image_utils.rs  logger.rs  mod.rs
tests/: helpers.rs  image_pipeline_tests.rs
