[package]
name = "imaginary-rs"
version = "0.1.0"
edition = "2021"
description = "Fast, simple, scalable HTTP microservice for high-level image processing"
authors = ["Ryan <ryancinsight>"]
license = "MIT"
repository = "https://github.com/ryancinsight/imaginary-rs"

[dependencies]
# Web framework
axum = {version = "0.8.4", features= ["http2","multipart"]}
tower-http = { version = "0.6.2", features = [
    "cors", 
    "trace",
    "compression-full",
    "limit",
    "timeout",
    "catch-panic",
    "request-id",
    "sensitive-headers",
    "validate-request",
    "trace"
]}

# Image processing
image = "0.25.5"

# Runtime and async
tokio = { version = "1.45.0", features = ["full"] }
# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Configuration and environment
clap = { version = "4.5.37", features = ["derive"] }
config = "0.15.11"

# Logging and metrics
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Utility
sha2 = "0.10.9"
hmac = "0.12.1"
rand = "0.8.5"  # Downgraded from 0.9.1 for compatibility
http = "1.3.1"

# Performance optimizations
cached = "0.44.0"  # Downgraded from 0.55.1 for compatibility
hex = "0.4.3"
toml = "0.8.22"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["jpeg", "png", "webp"]
jpeg = []
png = []
webp = []
heif = []
gif = []
simd = []  # Optional SIMD optimizations

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[[bin]]
name = "imaginary"
path = "src/main.rs"

[lib]
name = "imaginary"  # Make sure this matches your crate name
path = "src/lib.rs"
