[package]
name = "imaginary-rs"
version = "0.1.0"
edition = "2021"
description = "Fast, simple, scalable HTTP microservice for high-level image processing"
authors = ["Ryan <ryancinsight>"]
license = "MIT"
repository = "https://github.com/ryancinsight/imaginary-rs"

[dependencies]
# Web framework
axum = {version = "0.7.5", features= ["http2", "multipart", "json"]}
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5.2", features = [
    "cors", 
    "trace",
    "compression-full",
    "limit",
    "timeout",
    "catch-panic",
    "request-id",
    "sensitive-headers",
    "validate-request"
]}
tower = { version = "0.4", features = ["util", "timeout"] }

# Image processing
image = "0.24.9"
imageproc = "0.23.0"  # For advanced image processing like text rendering
rusttype = "0.9.3"    # Font rendering for watermarks

# Runtime and async
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
rustls-pemfile = "2"
# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Configuration and environment
clap = { version = "4.5.37", features = ["derive"] }
config = "0.15.11"

# Logging and metrics
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }

# Utility
sha2 = "0.10.9"
hmac = "0.12.1"
rand = "0.8.5"  # Downgraded from 0.9.1 for compatibility
http = "1.3.1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
once_cell = "1.19"

# Performance optimizations
cached = "0.44.0"  # Downgraded from 0.55.1 for compatibility
hex = "0.4.3"
toml = "0.8.22"

# Parallel processing
rayon = "1.10"
num_cpus = "1.16"

# System monitoring
sysinfo = "0.32"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["jpeg", "png", "webp"]
jpeg = []
png = []
webp = []
heif = []
gif = []
simd = []  # Optional SIMD optimizations

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[[bin]]
name = "imaginary"
path = "src/main.rs"

[lib]
name = "imaginary"  # Make sure this matches your crate name
path = "src/lib.rs"
